--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/webp" href="/favicon.webp" />
+
+    <meta property="og:title" content="Utopian Contributors" />
+    <meta property="og:description" content="Philosophy shapes the way we build." />
+    <meta property="og:image" content="/contributors.webp" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Utopian Contributors" />
+    <meta name="twitter:description" content="Philosophy shapes the way we build." />
+    <meta name="twitter:image" content="/contributors.webp" />
+
     <title>Home</title>
   </head>
   <body>
