--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <meta property="og:title" content="Utopian Contributors" />
     <meta property="og:description" content="Philosophy shapes the way we build." />
-    <meta property="og:image" content="/contributors.webp" />
+    <meta property="og:image" content="https://utopiancontributors.com/contributors.webp" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Utopian Contributors" />
     <meta name="twitter:description" content="Philosophy shapes the way we build." />
-    <meta name="twitter:image" content="/contributors.webp" />
+    <meta name="twitter:image" content="https://utopiancontributors.com/contributors.webp" />
 
     <title>Home</title>
   </head>
